--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-cli": "^3.22.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.4.0",
